# ngpd_manager

./: app.py  pyproject.toml
app_schemas/: schemas.py
backend/: app.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 36f46ccaaff1_create_student_table.py
backend/models/: app_models.py
backend/schemas/: app_schemas.py
backend/settings/: settings.py
backend/tests/: app_test.py  conftest.py  test_db.py
frontend/: package-lock.json
frontend/ngpd_manager/: package-lock.json  package.json  tsconfig.json
frontend/ngpd_manager/src/app/aluno/: interfaces.ts  page.tsx
frontend/ngpd_manager/src/app/utils/GlobalState/: index.ts
models/: app_models.py
tests/: app_test.py  conftest.py
